# udp_utils

./: .gitignore  .gitirnore  CMakeLists.txt  Readme.md  config.ini  env.sh
_hold/: RestClientTest.cpp
_hold/http/: RestClient.cpp  rest_server.cpp
_hold/include/http/: RestClient.h  rest_server.h
doc/: truth.js  udp_refresher.docx
js/: get_uuid.mjs  package.json  reciever.mjs  sender.mjs  upd_util.mjs
main/: CMakeLists.txt  Client-UdpUtils.cpp  Consumer-UdpUtils.cpp  MAIN-TCP-Client.cpp  MAIN-TCP-Server.cpp  MAIN-UDP-Client-Class.cpp  MAIN-UDP-Client-TemplateFunction.cpp  MAIN-UDP-Client-UdpUtils.cpp  MAIN-UDP-Consumer-UdpUtils.cpp  MAIN-UDP-Producer-UdpUtils.cpp  MAIN-UDP-Server-Class.cpp  MAIN-UDP-Server-TemplateFunction.cpp  MAIN-UDP-Server-UdpUtils.cpp  Producer-UdpUtils.cpp  Server-TemplateFunction.cpp  Server-UdpUtils.cpp  TcpImageClient.cpp  TcpImageServer.cpp  UdpClient.cpp  UdpServer.cpp  app.cpp  client.cpp  client_struct.cpp  consumer.cpp  helix.h  producer.cpp  server.cpp  server_struct.cpp
net/: CMakeLists.txt
net/include/: Props.h  RandomString.h  SyncTcpClient.h  SyncTcpServer.h  TimeMetric.h  UdpClient.h  UdpConsumer.h  UdpProducer.h  UdpServer.h  UdpUtils.h  amssgstypes.h  macro.h  net.h  utils.h
net/include/tcp/: SyncTCPServer.h  SyncTcpClient.h
net/include/udp/: UdpClient.h  UdpConsumeOne.h  UdpConsumer.h  UdpProducer.h  UdpRequestReply.h  UdpSend.h  UdpServer.h  UpdReceiveReply.h  udp_utils.h
net/src/: Props.cpp  RandomString.cpp  TimeMetric.cpp  UdpUtils.cpp  utils.cpp
net/src/udp/: UdpConsumeOne.cpp  UdpConsumer.cpp  udp_utils.cpp
test/: CMakeLists.txt  Hello-TEST.cpp  P2P-ProducerConsumer.cpp  Serializer-TEST.cpp  SerializerTest.cpp  T2T-ProducerConsumer.cpp  T2T-RequestReplyAsync-TEST.cpp  T2T-UdpProducerConsumer-TemplateFunction-TEST.cpp  T2T-UdpProducerConsumer-UdpUtilsSync-Bytes-TEST.cpp  T2T-UdpProducerConsumer-UdpUtilsSync-Structs-TEST.cpp  T2T-UdpRequestReply-TemplateFunction-TEST.cpp  T2T-UdpRequestReply-UdpUtilsSync-TEST.cpp  TEST-Hello.cpp  TEST-INI.cpp  TEST-Serializer.cpp  TEST-T2T-TCP-ClientServer.cpp  TEST-T2T-UDP-ClientServer-TemplateClass.cpp  TEST-T2T-UDP-ProducerConsumer-Bytes.cpp  TEST-T2T-UDP-ProducerConsumer-TemplateFunction.cpp  TEST-T2T-UDP-ProducerConsumer-UdpUtils-Structs.cpp  TEST-T2T-UDP-RequestReply-TemplateFunction.cpp  TEST-T2T-UDP-RequestReply-UdpUtils.cpp  TEST-Udp.cpp  TEST-UdpUtils.cpp  UdpUtils-TEST.cpp  teststructs.h
